--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <nav>
     <h2 class="mobilehidden"><a href="#"></a><span class="black">Fit</span> with Pete</h2>
     <ul>
-      <li class="mobilehidden"><a href="">About</a></li>
-      <li><a href="">Services</a></li>
-      <li><a href="">Products</a></li>
-      <li><a href="">Contact</a></li>
+      <li class="mobilehidden"><a href="#">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#products">Products</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
   
@@ -43,7 +43,7 @@
 
   <!--Services-->
 
-    <div class="services">
+    <div class="services" id="services">
       <h1>Our Services</h1>
       <figure class="fitclub">
         <img src="./src/img/fitclub.jpeg">
@@ -61,7 +61,7 @@
 
     <!--Products-->
 
-    <div class="products">
+    <div class="products" id="products">
       <h1>Products</h1>
       <figure>
         <img src="./src/img/breakfast.png">
@@ -79,7 +79,7 @@
 
     <!--Contact-->
 
-    <div class="contact">
+    <div class="contact" id="contact">
       <h1>Contact</h1>
       <h4>Name</h4>
       <input type="text" placeholder="Name">
